syntax = "proto3";

package arthasSample;


enum StatusEnum {
    START = 0;
    STOP = 1;
}

service ArthasTempService {
  rpc trace(ArthasSampleRequest) returns (ArthasSampleResponse);
  rpc watch(ArthasSampleRequest) returns (ArthasSampleResponse);
}

message ArthasSampleRequest {
  string name = 1;
  double age = 2;
  int64 price = 3;
  StatusEnum status = 4;
  repeated TestClass testList = 5;
}

message TestClass{
  string name = 1;
}

message ArthasSampleResponse {
  string message = 1;
}
